[package]
name = "my_torrent_client_project"
version = "0.1.0"
authors = ["kstola <kstola2@uic.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bencode = "0.1.16"
base64 = "0.12.0"
rustc-serialize = "0.3.24"
byteorder = "1.3.4"
num-traits = "0.2.11"
serde_bencode = "^0.2.0"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_bytes = "0.11.3"